<resources>
    <string name="app_name">kisan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="title_activity_lista_livros">Lista Livros</string>
    <string name="title_activity_visualizar_livro">Visualizar Livro</string>
    <string name="title_activity_visualizar_perfil">Meu Perfil</string>
    <string name="title_activity_visualizar_meus_anuncios">Meus Anuncios </string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_title">Busca</string>
    <string name="title_activity_visualziar_meus_anuncios">Visualziar Meus Livros</string>
    <string name="title_activity_conversas">Conversas</string>
    <string name="tv_descricao_livro">Descrição</string>
    <string name="tv_distancia_livro">Localizacão</string>
    <string name="tv_descricao_usuario">Descriçao usuario</string>
    <string name="comunicar_chat">CHAT</string>
    <string name="menu_search">Buscar</string>
    <string name="search_hint">Buscar</string>
    <string name="compartilhar_text">Compartilhar</string>
    <string name="title_activity_maps">Mapss</string>
    <string name="title_activity_visualizar__localizacao_">Visualizar Localizacao</string>
    <string name="title_activity_visualizar_wishlist">VisualizarWishlistActivity</string>
    <string name="title_activity_editar">Editar anuncio</string>

    <string name="facebook_app_id">1682749915341471</string>
    <string name="title_activity_pre_processamento">Kisan </string>
    <string name="title_activity_add_anuncio2">Adicionar livro</string>



</resources>
