<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.javapapers.android.gcm.chat.SignUpActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_margin="60dp"
        android:layout_marginBottom="74dp"
        android:contentDescription="Application Logo"
        android:src="@drawable/gcmchat" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:hint="@string/enter_username" />

    <Button
        android:id="@+id/ButtonLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@color/BrightBlue"
        android:text="@string/login"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:id="@+id/ButtonSignUp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@color/BrightBlue"
        android:text="@string/signup"
        android:textColorHint="@color/White"
        android:layout_alignTop="@+id/ButtonLogin"
        android:layout_alignRight="@+id/userName"
        android:layout_alignEnd="@+id/userName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/userName"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:layout_alignRight="@+id/userName"
        android:layout_alignEnd="@+id/userName"
        android:hint="@string/enter_password" />


</RelativeLayout>
